--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-/server/node_modules/
+/server/node_modules/*
+/server/node_modules
 /server/package.json
 /server/package-lock.json
 /server/config
